--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://RootStealer.github.io"
 
 github:
-  username: Ste4ler # change to your GitHub username
+  username: RootStealer # change to your GitHub username
 
 twitter:
   username: Shobhit Tomar # change to your Twitter username
